--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   },
   "keywords": [],
   "dependencies": {
+    "atob": "^2.1.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-basic-auth": "^1.2.0",
     "fs-extra": "^8.1.0",
+    "json2csv": "^4.5.4",
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.9",
     "multer": "^1.4.2",
-    "json2csv": "^4.5.4",
+    "passport-local-mongoose": "^6.0.1",
     "pdfmake": "^0.1.63"
   },
   "devDependencies": {
