--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "express-basic-auth": "^1.2.0",
     "fs-extra": "^8.1.0",
     "json2csv": "^4.5.4",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.9",
     "multer": "^1.4.2",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
     "pdfmake": "^0.1.63"
   },
