--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 5000
-MONGO_DB=mongodb://127.0.0.1:27017/linkedindb
+MONGO_DB=mongodb+srv://bouba:bouba@cluster0-lvdv9.azure.mongodb.net/test?retryWrites=true&w=majority
 JWT_SECRET= test
