--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "dependencies": {
@@ -20,6 +21,7 @@
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.9",
     "multer": "^1.4.2",
+    "multer-azure-storage": "^0.2.0",
     "passport": "^0.4.1",
     "passport-facebook-token": "^3.3.0",
     "passport-jwt": "^4.0.0",
