--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
+    "express-list-endpoints": "^4.0.1",
     "fs-extra": "^8.1.0",
     "json2csv": "^4.5.4",
     "jsonwebtoken": "^8.5.1",
